--- a/app/src/main/res/layout/partcase.xml
+++ b/app/src/main/res/layout/partcase.xml
@@ -37,7 +37,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header"/>
+            android:text="Grouping and Movement"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,7 +47,7 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body"/>
+            android:text="Partitive case is not an officially recognised case in the Irish language, but for the purpose of this guide, it is a topic that needs to be explained in its own right. Partitive case corresponds to its name - by being a part of something or more simply grouping. A noun in the partitive case is usually used when corresponding to picking something out of a group of similar items, or when a group becomes split."/>
 
         <View
             android:layout_width="match_parent"
@@ -65,7 +65,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header 2"/>
+            android:text="So when is this used?"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -75,7 +75,7 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body 2"/>
+            android:text="Partitive case is used at following times:\n\nIsolation from a group:\n• Tá cuid de na daltaí ann\n• A share of the students are there\n('Cuid' (share) is normally followed by the partitive preposition 'de' when the reporter of the action has some uncertainty and is making an approximation. If the reporter is more certain, genitive case may be used instead 'líon beag na ndaltaí' - 'a small number of the students')\n\nChange in Grouping:\n• Thit mé den chrann\n• I fell from the tree\n(The doer was once part of the tree's structure by climbing it and was considered to be 'one unit'. By falling, the relationship of touch is broken and it's seen as a group being split.\n\nCertain Verbs:\n• Déanaim neamhaird de chuireadh cairdis\n• I ignore friend requests\n(déanann X neamhaird + de Y, X ignores Y.)"/>
 
         <View
             android:layout_width="fill_parent"
