--- a/app/src/main/res/layout/voccase.xml
+++ b/app/src/main/res/layout/voccase.xml
@@ -37,7 +37,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header"/>
+            android:text="Making Yourself Heard"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,7 +47,7 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body"/>
+            android:text="Vocative case is when you become vocal. It is the case of exclaiming by calling someone's name, by swearing, or by counting. There is no specific question associated with vocative case, but it is normally followed with an exclamation mark, 'John!' 'Damn!'. The vocative case can always be seen with its particle 'a' before it which causes lenition."/>
 
         <View
             android:layout_width="match_parent"
@@ -65,7 +65,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="5dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="Header 2"/>
+            android:text="Examples"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -75,7 +75,35 @@
             android:paddingRight="15dp"
             android:paddingBottom="10dp"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:text="Body 2"/>
+            android:text="• 'A Sheáin!'\n• 'John!'\n\n• 'A Dhia!'\n• 'God!'\n\n• 'A mhuise...'\n• 'Like...'\n\n• 'A h-aon, a dó, a trí...'\n• 'One, two, three...'"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@android:color/darker_gray"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="5dp"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:text="Stressing"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
+            android:paddingBottom="10dp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="By default, using the particle 'a' before a word just indicates that it's in the vocative case. If the exclaimer wants to stress the noun by adding the equivalent English 'Oh!' to it, the word 'ó' must be prefixed or suffixed to the sentence.\n\n• Ó a Sheáin! A Sheáin ó! - Oh John!\n\nIt's important to also note that you do not use possessive pronouns with the vocative case in Irish. This means:\n\n• 'Oh my God!' is simply written as 'Ó a Dhia!'\n\nTherefore this is incorrect:\n• *Ó mo Dhia (incorrect)"/>
 
         <View
             android:layout_width="fill_parent"
