--- a/app/src/main/res/layout/activity_navigation.xml
+++ b/app/src/main/res/layout/activity_navigation.xml
@@ -5,32 +5,7 @@
     android:background="@color/white"
     android:orientation="vertical" >
 
-    <LinearLayout
-        android:paddingTop="30dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/blue"
-        android:paddingBottom="10dp"
-        android:orientation="horizontal" >
 
-        <ImageView
-            android:id="@+id/home"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            android:background="@drawable/ic_drawer" />
-
-        <TextView
-            android:id="@+id/appname"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:paddingRight="40dp"
-            android:text="Irish Grammar"
-            android:textColor="@color/white"
-            android:textSize="26sp" />
-    </LinearLayout>
 
     <android.support.v4.widget.DrawerLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
@@ -43,7 +18,7 @@
 
         <FrameLayout
             android:id="@+id/content_frame"
-            android:background="@color/white"
+            android:background="@color/lightestgrey"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginTop="0dp"/>
@@ -56,7 +31,7 @@
             android:paddingRight="2dp"
             android:layout_height="match_parent"
             android:layout_gravity="left"
-            android:background="@color/lightgrey" >
+            android:background="@android:color/darker_gray" >
         </ExpandableListView>
     </android.support.v4.widget.DrawerLayout>
 </LinearLayout>
