--- a/app/src/main/res/layout/whylearnirish_layout.xml
+++ b/app/src/main/res/layout/whylearnirish_layout.xml
@@ -5,7 +5,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:weightSum="1">
         <View
             android:layout_width="fill_parent"
             android:layout_height="1dp"
@@ -29,10 +30,11 @@
             android:layout_marginRight="15dp" />
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="200dp"
+            android:layout_height="250dp"
             android:id="@+id/imageViewIreland"
-            android:background="@drawable/ireland"
+            android:background="@drawable/c_ireland"
+            android:scaleType="fitXY"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
             android:layout_alignParentBottom="true"
